@@ -99,7 +99,7 @@ TABLE OF CONTENTS
         * Charybdis 1.0 - 2.1
         * Hybrid IRCd 7.0
         * Hyperion/DancerIRCd
-        * Inspircd 1.1.12+
+        * Inspircd 1.1.x
         * IRCU 2.10.11 and 2.10.12
         * Nefarious IRCu 1.0.x
         * ngIRCd 0.9.1
